--- a/ALBERT_Trials.ipynb
+++ b/ALBERT_Trials.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ALBERT Trials.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPWKdYaN+NamMihpbye/JXD",
+      "authorship_tag": "ABX9TyMzTzdY10K+y8I024lYG0kT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0pWuBWHyI7N0",
-        "outputId": "4400f915-67ed-45f2-a66e-5fbecea92793"
+        "outputId": "48fc9802-ad36-424f-e191-8b45405633c7"
       },
       "source": [
         "import numpy as np # linear algebra\r\n",
@@ -48,7 +48,7 @@
         "import tensorflow as tf\r\n",
         "from tensorflow.keras.layers import Dense, Input, GRU, Dropout\r\n",
         "from tensorflow.keras.optimizers import Adam\r\n",
-        "from tensorflow.keras.models import Model\r\n",
+        "from tensorflow.keras.models import Model, Sequential\r\n",
         "from tensorflow.keras.callbacks import ModelCheckpoint\r\n",
         "import tensorflow_hub as hub\r\n",
         "import pickle\r\n",
@@ -58,15 +58,15 @@
         "import string\r\n",
         "import requests"
       ],
-      "execution_count": 1,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+            "[nltk_data]   Package punkt is already up-to-date!\n"
           ],
           "name": "stdout"
         }
@@ -346,11 +346,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "w-O2clMHQ2iJ",
-        "outputId": "66c93aec-6bc6-459a-ccc6-20d517bb7322",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "w-O2clMHQ2iJ",
+        "outputId": "66c93aec-6bc6-459a-ccc6-20d517bb7322"
       },
       "source": [
         "print(len(albert_encodings[0]))"
@@ -369,11 +369,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YFdwuwnzQ5ly",
-        "outputId": "0f5b9ca7-de16-4ae8-e5e4-732ec5dbf71d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YFdwuwnzQ5ly",
+        "outputId": "0f5b9ca7-de16-4ae8-e5e4-732ec5dbf71d"
       },
       "source": [
         "print(vader_encodings[0])"
@@ -392,11 +392,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "J8IitoLbU52c",
-        "outputId": "21d7f4e0-c663-4be3-cc69-5f10848b6857",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "J8IitoLbU52c",
+        "outputId": "21d7f4e0-c663-4be3-cc69-5f10848b6857"
       },
       "source": [
         "print(list(albert_encodings[0]).extend(vader_encodings[0]))"
@@ -425,29 +425,50 @@
         "    temp.append(j)\r\n",
         "  for j in vader_encodings[i]:\r\n",
         "    temp.append(j)\r\n",
-        "  train_input.append(temp)"
+        "  train_input.append(np.asarray(temp))"
       ],
-      "execution_count": 37,
+      "execution_count": 49,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0J17gAY7Ub2i",
-        "outputId": "de199aa1-9b7d-45b0-c6e7-b60675664093",
+        "id": "0J17gAY7Ub2i"
+      },
+      "source": [
+        "train_input=np.asarray(train_input)"
+      ],
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mWWl77MRf7C5",
+        "outputId": "3df39f39-0578-484e-8e08-47f23268906d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        ""
+        "model = Sequential()\r\n",
+        "model.add(Dense(100, input_dim=772, activation='relu'))\r\n",
+        "model.add(Dense(100, activation='relu'))\r\n",
+        "model.add(Dense(6, activation='softmax'))\r\n",
+        "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\r\n",
+        "model.fit(train_input, train_labels, epochs=100, batch_size=1)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "14097\n"
+            "Epoch 1/100\n",
+            "14097/14097 [==============================] - 24s 2ms/step - loss: 1.7500 - accuracy: 0.2482\n",
+            "Epoch 2/100\n",
+            "14097/14097 [==============================] - 23s 2ms/step - loss: 1.7249 - accuracy: 0.2537\n",
+            "Epoch 3/100\n",
+            " 3281/14097 [=====>........................] - ETA: 17s - loss: 1.7300 - accuracy: 0.2499"
           ],
           "name": "stdout"
         }
